cloudformation/Network-stack.yaml
AWSTemplateFormatVersion: '2010-09-09'

Description: >
  CloudMart Network Stack.
  Creates VPC, public/private subnets, route tables,
  security groups and VPC endpoints.
  A second private subnet is created only to satisfy
  the AWS RDS DB subnet group requirement. No application
  workloads are deployed in the second subnet.


# =========================================================
# PARAMETERS
# =========================================================

Parameters:

  Environment:
    Type: String
    AllowedPattern: '^[a-z0-9-]+$'

    Description: Deployment environment

#dev,prod,dev-1,prod-2026,cloudmart,cloudmart-dev,dev123,123,a-b-c
# =========================================================
# RESOURCES
# =========================================================

Resources:


  # =========================================================
  # VPC
  # =========================================================

  CloudMartVPC:
    Type: AWS::EC2::VPC

    Properties:

      CidrBlock: 10.0.0.0/16

      EnableDnsSupport: true

      EnableDnsHostnames: true

      Tags:

        - Key: Name
          Value: !Sub cloudmart-${Environment}-vpc


  # =========================================================
  # INTERNET GATEWAY
  # =========================================================

  InternetGateway:
    Type: AWS::EC2::InternetGateway

    Properties:

      Tags:

        - Key: Name
          Value: !Sub cloudmart-${Environment}-igw


  # =========================================================
  # ATTACH INTERNET GATEWAY
  # =========================================================

  AttachInternetGateway:
    Type: AWS::EC2::VPCGatewayAttachment

    Properties:

      VpcId:
        !Ref CloudMartVPC

      InternetGatewayId:
        !Ref InternetGateway


  # =========================================================
  # PUBLIC SUBNET
  # =========================================================

  PublicSubnet:
    Type: AWS::EC2::Subnet

    Properties:

      VpcId:
        !Ref CloudMartVPC

      CidrBlock: 10.0.1.0/24

      AvailabilityZone:
        !Select
          - 0
          - !GetAZs ''

      MapPublicIpOnLaunch: true

      Tags:

        - Key: Name
          Value: !Sub cloudmart-${Environment}-public-subnet


  # =========================================================
  # PRIMARY PRIVATE SUBNET
  # =========================================================

  PrivateSubnet:
    Type: AWS::EC2::Subnet

    Properties:

      VpcId:
        !Ref CloudMartVPC

      CidrBlock: 10.0.2.0/24

      AvailabilityZone:
        !Select
          - 0
          - !GetAZs ''

      MapPublicIpOnLaunch: false

      Tags:

        - Key: Name
          Value: !Sub cloudmart-${Environment}-private-subnet


  # =========================================================
  # SECOND PRIVATE SUBNET
  # =========================================================
  #
  # Used only to satisfy the RDS DB subnet group
  # requirement of having subnets in two Availability Zones.
  #
  # 10.0.2.0/24 -> AZ 0
  # 10.0.3.0/24 -> AZ 1
  #
  # No application workloads are deployed here.
  # =========================================================

  RdsSupportPrivateSubnet:
    Type: AWS::EC2::Subnet

    Properties:

      VpcId:
        !Ref CloudMartVPC

      CidrBlock: 10.0.3.0/24

      AvailabilityZone:
        !Select
          - 1
          - !GetAZs ''

      MapPublicIpOnLaunch: false

      Tags:

        - Key: Name
          Value: !Sub cloudmart-${Environment}-rds-support-private-subnet

        - Key: Purpose
          Value: RDS-DBSubnetGroup-Requirement


  # =========================================================
  # PUBLIC ROUTE TABLE
  # =========================================================

  PublicRouteTable:
    Type: AWS::EC2::RouteTable

    Properties:

      VpcId:
        !Ref CloudMartVPC

      Tags:

        - Key: Name
          Value: !Sub cloudmart-${Environment}-public-rt


  # =========================================================
  # PUBLIC ROUTE
  # =========================================================

  PublicRoute:
    Type: AWS::EC2::Route

    DependsOn:
      - AttachInternetGateway

    Properties:

      RouteTableId:
        !Ref PublicRouteTable

      DestinationCidrBlock:
        0.0.0.0/0

      GatewayId:
        !Ref InternetGateway


  # =========================================================
  # PUBLIC SUBNET ROUTE TABLE ASSOCIATION
  # =========================================================

  PublicSubnetRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation

    Properties:

      SubnetId:
        !Ref PublicSubnet

      RouteTableId:
        !Ref PublicRouteTable


  # =========================================================
  # PRIVATE ROUTE TABLE
  # =========================================================

  PrivateRouteTable:
    Type: AWS::EC2::RouteTable

    Properties:

      VpcId:
        !Ref CloudMartVPC

      Tags:

        - Key: Name
          Value: !Sub cloudmart-${Environment}-private-rt


  # =========================================================
  # PRIMARY PRIVATE SUBNET ROUTE TABLE ASSOCIATION
  # =========================================================

  PrivateSubnetRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation

    Properties:

      SubnetId:
        !Ref PrivateSubnet

      RouteTableId:
        !Ref PrivateRouteTable


  # =========================================================
  # RDS SUPPORT SUBNET ROUTE TABLE ASSOCIATION
  # =========================================================

  RdsSupportPrivateSubnetRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation

    Properties:

      SubnetId:
        !Ref RdsSupportPrivateSubnet

      RouteTableId:
        !Ref PrivateRouteTable


  # =========================================================
  # LAMBDA SECURITY GROUP
  # =========================================================
  #
  # Lambda functions use this security group.
  #
  # Outbound:
  #   TCP 443  -> AWS services
  #   TCP 3306 -> RDS private subnets
  #
  # IMPORTANT:
  # We use subnet CIDRs for outbound 3306 instead  of
  # DestinationSecurityGroupId: !Ref RdsSecurityGroup.
  #
  # This avoids a CloudFormation circular dependency because
  # RdsSecurityGroup already references LambdaSecurityGroup
  # for its inbound MySQL rule.
  # =========================================================

  LambdaSecurityGroup:
    Type: AWS::EC2::SecurityGroup

    Properties:

      GroupDescription:
        Allow Lambda functions to communicate with
        RDS and AWS VPC interface endpoints.

      VpcId:
        !Ref CloudMartVPC

      SecurityGroupEgress:

        # -------------------------------------------------
        # HTTPS access to AWS services
        # -------------------------------------------------

        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: 0.0.0.0/0

        # -------------------------------------------------
        # MySQL access to primary RDS private subnet
        # -------------------------------------------------

        - IpProtocol: tcp
          FromPort: 3306
          ToPort: 3306
          CidrIp: 10.0.2.0/24

        # -------------------------------------------------
        # MySQL access to RDS support private subnet
        # -------------------------------------------------

        - IpProtocol: tcp
          FromPort: 3306
          ToPort: 3306
          CidrIp: 10.0.3.0/24

      Tags:

        - Key: Name
          Value: !Sub cloudmart-${Environment}-lambda-sg


  # =========================================================
  # EC2 DASHBOARD SECURITY GROUP
  # =========================================================
  #
  # Used by the CloudMart Flask dashboard EC2 instance.
  #
  # EC2 Dashboard
  #      |
  #      +---- HTTPS 443 ----> AWS services / VPC endpoints
  #      |
  #      +---- MySQL 3306 --> RDS
  #      |
  #      +---- HTTP 80 -----> Dashboard users
  # =========================================================

  EC2SecurityGroup:
    Type: AWS::EC2::SecurityGroup

    Properties:

      GroupDescription:
        Allow CloudMart dashboard EC2 access to
        the dashboard, RDS and AWS services.

      VpcId:
        !Ref CloudMartVPC

      SecurityGroupIngress:

        # -------------------------------------------------
        # HTTP access to the Flask/Nginx dashboard
        # -------------------------------------------------
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0

      SecurityGroupEgress:

        # -------------------------------------------------
        # HTTPS access to AWS services / VPC endpoints
        # -------------------------------------------------
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: 0.0.0.0/0

        # -------------------------------------------------
        # MySQL access to primary private subnet
        # -------------------------------------------------
        - IpProtocol: tcp
          FromPort: 3306
          ToPort: 3306
          CidrIp: 10.0.2.0/24

        # -------------------------------------------------
        # MySQL access to RDS support private subnet
        # -------------------------------------------------
        - IpProtocol: tcp
          FromPort: 3306
          ToPort: 3306
          CidrIp: 10.0.3.0/24

      Tags:

        - Key: Name
          Value: !Sub cloudmart-${Environment}-ec2-dashboard-sg


  # =========================================================
  # VPC ENDPOINT SECURITY GROUP
  # =========================================================
  #
  # Lambda
  #   |
  #   | TCP 443
  #   v
  # VPC Endpoint SG
  #   |
  #   +---- SSM
  #   |
  #   +---- CloudWatch Logs
  #   |
  #   +---- EventBridge
  # =========================================================

  VpcEndpointSecurityGroup:
    Type: AWS::EC2::SecurityGroup

    Properties:

      GroupDescription:
        Allow HTTPS traffic from Lambda functions
        to VPC interface endpoints.

      VpcId:
        !Ref CloudMartVPC

      SecurityGroupIngress:
        # Lambda → VPC endpoints
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          SourceSecurityGroupId:
            !Ref LambdaSecurityGroup

        # EC2 Dashboard → VPC endpoints
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          SourceSecurityGroupId:
            !Ref EC2SecurityGroup

      SecurityGroupEgress:

        - IpProtocol: -1
          CidrIp: 0.0.0.0/0

      Tags:

        - Key: Name
          Value: !Sub cloudmart-${Environment}-vpce-sg


  # =========================================================
  # RDS SECURITY GROUP
  # =========================================================
  #
  # Only Lambda functions using LambdaSecurityGroup
  # can connect to MySQL on port 3306.
  # =========================================================

  RdsSecurityGroup:
    Type: AWS::EC2::SecurityGroup

    Properties:

      GroupDescription:
        Allow MySQL access only from Lambda security group.

      VpcId:
        !Ref CloudMartVPC

      SecurityGroupIngress:
        # Lambda → RDS
        - IpProtocol: tcp
          FromPort: 3306
          ToPort: 3306

          SourceSecurityGroupId:
            !Ref LambdaSecurityGroup

        # EC2 Dashboard → RDS
        - IpProtocol: tcp
          FromPort: 3306
          ToPort: 3306

          SourceSecurityGroupId:
            !Ref EC2SecurityGroup

      SecurityGroupEgress:

        - IpProtocol: -1
          CidrIp: 0.0.0.0/0

      Tags:

        - Key: Name
          Value: !Sub cloudmart-${Environment}-rds-sg


  # =========================================================
  # SSM VPC INTERFACE ENDPOINT
  # =========================================================
  #
  # Allows private Lambda functions to access
  # SSM Parameter Store privately.
  # =========================================================

  SsmVpcEndpoint:
    Type: AWS::EC2::VPCEndpoint

    Properties:

      VpcId:
        !Ref CloudMartVPC

      ServiceName:
        !Sub com.amazonaws.${AWS::Region}.ssm

      VpcEndpointType: Interface

      PrivateDnsEnabled: true

      SubnetIds:

        - !Ref PrivateSubnet

      SecurityGroupIds:

        - !Ref VpcEndpointSecurityGroup

      Tags:

        - Key: Name
          Value: !Sub cloudmart-${Environment}-ssm-endpoint


  # =========================================================
  # CLOUDWATCH LOGS VPC INTERFACE ENDPOINT
  # =========================================================
  #
  # Allows private Lambda functions to send logs
  # to CloudWatch Logs.
  # =========================================================

  CloudWatchLogsVpcEndpoint:
    Type: AWS::EC2::VPCEndpoint

    Properties:

      VpcId:
        !Ref CloudMartVPC

      ServiceName:
        !Sub com.amazonaws.${AWS::Region}.logs

      VpcEndpointType: Interface

      PrivateDnsEnabled: true

      SubnetIds:

        - !Ref PrivateSubnet

      SecurityGroupIds:

        - !Ref VpcEndpointSecurityGroup

      Tags:

        - Key: Name
          Value: !Sub cloudmart-${Environment}-logs-endpoint

  # =========================================================
  # CLOUDWATCH MONITORING VPC INTERFACE ENDPOINT
  # =========================================================
  #
  # Allows private Lambda functions to publish
  # custom CloudWatch metrics using PutMetricData.
  #
  # Required for:
  #   cloudwatch.put_metric_data()
  #
  # =========================================================

  CloudWatchMonitoringVpcEndpoint:
    Type: AWS::EC2::VPCEndpoint

    Properties:

      VpcId:
        !Ref CloudMartVPC

      ServiceName:
        !Sub com.amazonaws.${AWS::Region}.monitoring

      VpcEndpointType: Interface

      PrivateDnsEnabled: true

      SubnetIds:

        - !Ref PrivateSubnet

      SecurityGroupIds:

        - !Ref VpcEndpointSecurityGroup

      Tags:

        - Key: Name
          Value: !Sub cloudmart-${Environment}-cloudwatch-monitoring-endpoint

  # =========================================================
  # EVENTBRIDGE VPC INTERFACE ENDPOINT
  # =========================================================
  #
  # Allows Lambda functions running inside the private subnet
  # to communicate with Amazon EventBridge privately.
  #
  # Flow:
  #
  # Product Lambda
  #       |
  #       | events:PutEvents
  #       v
  # EventBridge VPC Endpoint
  #       |
  #       v
  # EventBridge Event Bus
  #
  # No Internet/NAT Gateway is required for this connection.
  # =========================================================

  EventBridgeVpcEndpoint:
    Type: AWS::EC2::VPCEndpoint

    Properties:

      VpcId:
        !Ref CloudMartVPC

      ServiceName:
        !Sub com.amazonaws.${AWS::Region}.events

      VpcEndpointType: Interface

      PrivateDnsEnabled: true

      SubnetIds:

        - !Ref PrivateSubnet

      SecurityGroupIds:

        - !Ref VpcEndpointSecurityGroup

      Tags:

        - Key: Name
          Value: !Sub cloudmart-${Environment}-eventbridge-endpoint

  # =========================================================
  # S3 VPC GATEWAY ENDPOINT
  # =========================================================
  #
  # Allows private Lambda functions to access
  # the CloudMart Reports S3 bucket without
  # requiring a NAT Gateway or Internet Gateway.
  #
  # Flow:
  #
  # Report Lambda
  #      |
  #      v
  # Private Route Table
  #      |
  #      v
  # S3 Gateway Endpoint
  #      |
  #      v
  # Amazon S3
  #
  # =========================================================

  S3VpcEndpoint:
    Type: AWS::EC2::VPCEndpoint

    Properties:

      VpcId:
        !Ref CloudMartVPC

      ServiceName:
        !Sub com.amazonaws.${AWS::Region}.s3

      VpcEndpointType: Gateway

      RouteTableIds:
        - !Ref PrivateRouteTable

      Tags:
        - Key: Name
          Value: !Sub cloudmart-${Environment}-s3-endpoint

# =========================================================
# OUTPUTS
# =========================================================

Outputs:


  # =========================================================
  # VPC
  # =========================================================

  VpcId:

    Description:
      CloudMart VPC ID

    Value:
      !Ref CloudMartVPC

    Export:
      Name:
        !Sub CloudMart-${Environment}-VpcId


  # =========================================================
  # PUBLIC SUBNET
  # =========================================================

  PublicSubnetId:

    Description:
      CloudMart public subnet ID

    Value:
      !Ref PublicSubnet

    Export:
      Name:
        !Sub CloudMart-${Environment}-PublicSubnetId


  # =========================================================
  # PRIMARY PRIVATE SUBNET
  # =========================================================

  PrivateSubnetId:

    Description:
      CloudMart primary private subnet ID

    Value:
      !Ref PrivateSubnet

    Export:
      Name:
        !Sub CloudMart-${Environment}-PrivateSubnetId


  # =========================================================
  # RDS SUPPORT PRIVATE SUBNET
  # =========================================================

  RdsSupportPrivateSubnetId:

    Description: >
      Secondary private subnet used only to satisfy
      the RDS DB subnet group two-AZ requirement.
      No application workloads are deployed here.

    Value:
      !Ref RdsSupportPrivateSubnet

    Export:
      Name:
        !Sub CloudMart-${Environment}-RdsSupportPrivateSubnetId


  # =========================================================
  # LAMBDA SECURITY GROUP
  # =========================================================

  LambdaSecurityGroupId:

    Description:
      Security group used by CloudMart Lambda functions

    Value:
      !Ref LambdaSecurityGroup

    Export:
      Name:
        !Sub CloudMart-${Environment}-LambdaSecurityGroupId


  # =========================================================
  # RDS SECURITY GROUP
  # =========================================================

  RdsSecurityGroupId:

    Description:
      Security group used by CloudMart RDS MySQL

    Value:
      !Ref RdsSecurityGroup

    Export:
      Name:
        !Sub CloudMart-${Environment}-RdsSecurityGroupId

  # =========================================================
  # EC2 DASHBOARD SECURITY GROUP
  # =========================================================

  EC2SecurityGroupId:

    Description:
      Security group used by the CloudMart EC2 dashboard

    Value:
      !Ref EC2SecurityGroup

    Export:
      Name:
        !Sub CloudMart-${Environment}-EC2SecurityGroupId

  # =========================================================
  # VPC ENDPOINT SECURITY GROUP
  # =========================================================

  VpcEndpointSecurityGroupId:

    Description:
      Security group used by CloudMart interface VPC endpoints

    Value:
      !Ref VpcEndpointSecurityGroup

    Export:
      Name:
        !Sub CloudMart-${Environment}-VpcEndpointSecurityGroupId


  # =========================================================
  # SSM VPC ENDPOINT
  # =========================================================

  SsmVpcEndpointId:

    Description:
      SSM Parameter Store VPC interface endpoint

    Value:
      !Ref SsmVpcEndpoint

    Export:
      Name:
        !Sub CloudMart-${Environment}-SsmVpcEndpointId


  # =========================================================
  # CLOUDWATCH MONITORING VPC ENDPOINT
  # =========================================================

  CloudWatchMonitoringVpcEndpointId:

    Description:
      CloudWatch Monitoring VPC interface endpoint

    Value:
      !Ref CloudWatchMonitoringVpcEndpoint

    Export:
      Name:
        !Sub CloudMart-${Environment}-CloudWatchMonitoringVpcEndpointId


  # =========================================================
  # CLOUDWATCH LOGS VPC ENDPOINT
  # =========================================================

  CloudWatchLogsVpcEndpointId:

    Description:
      CloudWatch Logs VPC interface endpoint

    Value:
      !Ref CloudWatchLogsVpcEndpoint

    Export:
      Name:
        !Sub CloudMart-${Environment}-CloudWatchLogsVpcEndpointId


  # =========================================================
  # EVENTBRIDGE VPC ENDPOINT
  # =========================================================

  EventBridgeVpcEndpointId:

    Description:
      EventBridge VPC interface endpoint used by
      private Lambda functions to publish events.

    Value:
      !Ref EventBridgeVpcEndpoint

    Export:
      Name:
        !Sub CloudMart-${Environment}-EventBridgeVpcEndpointId

  # =========================================================
  # S3 VPC ENDPOINT
  # =========================================================

  S3VpcEndpointId:

    Description:
      S3 VPC gateway endpoint

    Value:
      !Ref S3VpcEndpoint

    Export:
      Name:
        !Sub CloudMart-${Environment}-S3VpcEndpointId
